--- a/xmlStrip-production.ipynb
+++ b/xmlStrip-production.ipynb
@@ -2514,15 +2514,35 @@
     "        except:\n",
     "            print(\"> Ingen settbeskrivelse.\")\n",
     "            checkSet = 0\n",
-    "            \n",
+    "        \n",
     "        try:\n",
-    "            castlist = content.find(\"docTitle\") # Finn tittel (i front)\n",
+    "            castlist = content.find(\"doctitle\") # Finn tittel (i front)\n",
     "            castlist.extract() # Hent den ut\n",
     "            print(\"Hentet tittel i teksten\")\n",
     "            titleGot = 1\n",
     "        except:\n",
     "            print(\"> Ingen tittel i teksten.\")\n",
     "            titleGot = 0\n",
+    "            \n",
+    "        if getWholeTitlePage == 1:\n",
+    "            try:\n",
+    "                titlepage = content.find(\"titlepage\") # Finn tittel (i front)\n",
+    "                titlepage.extract() # Hent den ut\n",
+    "                print(\"Hentet tittelside ut av teksten\")\n",
+    "                titlePageGot = 1\n",
+    "            except:\n",
+    "                print(\"> Ingen tittelside i teksten.\")\n",
+    "                titlePageGot = 0\n",
+    "            \n",
+    "        if titleGot == 1:\n",
+    "            target = content.body # Mål: Body-taggen\n",
+    "            castlist.append(\"\\n\") # Legg til et mellomrom helt på slutten for sikkerhets skyld.\n",
+    "            if checkSet == 1:\n",
+    "                castlist.append(\"\\n\") # Legg til et mellomrom mellom cast & set\n",
+    "            else:\n",
+    "                castlist.append(\"DELETEMEDUMMYSPACE\") # Legg til et mellomrom helt på slutten\n",
+    "            target.insert_before(castlist) # Sett inn castlist foran target\n",
+    "            \n",
     "        if titleGot == 1:\n",
     "            target = content.body # Mål: Body-taggen\n",
     "            castlist.append(\"\\n\") # Legg til et mellomrom helt på slutten for sikkerhets skyld.\n",
