--- a/IbsensXMLstrip.ipynb
+++ b/IbsensXMLstrip.ipynb
@@ -5,7 +5,7 @@
    "id": "93503062",
    "metadata": {},
    "source": [
-    "# IbsensXMLstrip\n",
+    "# IbsensXMLstrip (IXMLS)\n",
     "Release *1.0.25*\n",
     "\n",
     "Mars 2022\n",
